<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Principal" >
    <item
        android:id="@+id/mnuBuscar"
        android:title="@string/optBuscar"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/mnuCarga"
        android:title="@string/optCarga"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/mnuAgregar"
        android:title="@string/optAgregar"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="90"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/mnuLimpiarTablaVendedor"
        android:title="@string/opcBDV"
        android:orderInCategory="100">
    </item>
    <item
        android:id="@+id/mnuOpc2"
        android:title="@string/opc2"
        android:orderInCategory="100">
    </item>
</menu>